--- a/.github/workflows/x86_64_openwrt.yml
+++ b/.github/workflows/x86_64_openwrt.yml
@@ -11,8 +11,8 @@ name: x86-x64-openwrt
 on:
   repository_dispatch:
   workflow_dispatch:
-  schedule:
-    - cron: 0 17 * * *
+  #  schedule:
+    #  - cron: 0 17 * * *
   watch:
     types: started
 
